# emomtimer

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  style.css
.devcontainer/: devcontainer.json
.github/docker/: Dockerfile.build
.github/workflows/: ci-cd.yml  ci-image.yml  commit-lint.yml  commitlint.yml  deploy-crate.yml  github-pages.yml  release-image.yml  s3-sync.yml  yamlfmt.yml
examples/: simple_countdown.rs
src/: countdown_timer.rs  lib.rs  main.rs
