[package]
name = "emom"
version = "1.1.6"
edition = "2024"
description = "A customizable EMOM (Every Minute On the Minute) timer for workouts, with a drift-correcting countdown timer library for WebAssembly applications"
license = "BSD-3-Clause"
repository = "https://github.com/jac18281828/emomtimer"
homepage = "https://github.com/jac18281828/emomtimer"
documentation = "https://jac18281828.github.io/emomtimer/"
keywords = ["timer", "workout", "emom", "wasm", "yew"]
categories = ["wasm", "web-programming"]
readme = "README.md"

[dependencies]
gloo-timers = "0.3.0"
log = { version = "0.4.28", features = ["release_max_level_info"] }
wasm-logger = "0.2.0"
yew = { version="0.21.0", features=["csr"] }
js-sys = "0.3.83"

[profile.release]
# Optimize for size
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization, slower compile
panic = 'abort'     # Remove panic unwinding code
strip = true        # Strip symbols from binary

[profile.release.package."*"]
opt-level = 'z'
strip = true
